--- a/web/src/assets/scss/style.css
+++ b/web/src/assets/scss/style.css
@@ -635,16 +635,100 @@ p {
   background-position: -2% 72.588%;
 }
 
-.sprite.sprite-news {
+.sprite.sprite-arrow {
+  width: 0.7692rem;
+  height: 0.7692rem;
+  background-position: 38.577% 52.076%;
+}
+
+.sprite.sprite-blz {
   width: 1.7692rem;
   height: 1.5385rem;
   background-position: 63.546% 15.517%;
 }
 
-.sprite.sprite-arrow {
-  width: 0.7692rem;
-  height: 0.7692rem;
-  background-position: 38.577% 52.076%;
+.sprite.sprite-gsz {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 90.483% 15%;
+}
+
+.sprite.sprite-zbsc {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 36.746% 0.924%;
+}
+
+.sprite.sprite-tyf {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 10.408% 15.517%;
+}
+
+.sprite.sprite-xrzq {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 89.733% 1.266%;
+}
+
+.sprite.sprite-rycc {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 36.1% 14.5%;
+}
+
+.sprite.sprite-mnzzlk {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 9.302% 0.813%;
+}
+
+.sprite.sprite-wzyd {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 63.3% 0.927%;
+}
+
+.sprite.sprite-gzh {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 0 96.207%;
+}
+
+.sprite.sprite-bbjs {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 63.546% 15.517%;
+}
+
+.sprite.sprite-djhj {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 9.302% 0.813%;
+}
+
+.sprite.sprite-wxwzt {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 89.733% 1.266%;
+}
+
+.sprite.sprite-cyhdy {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 36.1% 15.287%;
+}
+
+.sprite.sprite-yxsp {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 10.408% 27.209%;
+}
+
+.sprite.sprite-ytsyx {
+  width: 1.7692rem;
+  height: 1.5385rem;
+  background-position: 10.549% 41.379%;
 }
 
 .border-top {
